# omnigrasp

./: LICENSE  README.md  README.md.bak  eval_graspnet_gpu.py  eval_results.json  generate_demo_gif.py  test_graspnet_local.py  test_real_inference.py
.github/workflows/: ci.yml
data/graspnet/: generate_synthetic_scene.py
data/graspnet/scene_0000/kinect/: camK.npy
data/graspnet/scene_0000/kinect/meta/: 0000.mat  0001.mat  0002.mat  0003.mat  0004.mat
docker/: Dockerfile  docker-compose.yml  ros_entrypoint.sh
src/omnigrasp_control/: package.xml  setup.cfg  setup.py
src/omnigrasp_control/omnigrasp_control/: __init__.py  rl_controller_node.py
src/omnigrasp_interfaces/: CMakeLists.txt  package.xml
src/omnigrasp_interfaces/msg/: Detection.msg  PerceptionDiagnostics.msg
src/omnigrasp_perception/: package.xml  setup.cfg  setup.py
src/omnigrasp_perception/omnigrasp_perception/: __init__.py  diagnostics.py  mock_camera_node.py  perception_node.py
src/omnigrasp_perception/omnigrasp_perception/data/: graspnet_loader.py
src/omnigrasp_perception/omnigrasp_perception/detectors/: __init__.py  base_detector.py  detection_fusion.py  grounding_dino.py  owl_vit.py
src/omnigrasp_perception/omnigrasp_perception/eval/: evaluate_perception.py
src/omnigrasp_perception/omnigrasp_perception/geometry/: __init__.py  camera_model.py  frame_transforms.py  grasp_pose_estimator.py
src/omnigrasp_perception/omnigrasp_perception/segmentation/: __init__.py  sam2_segmentor.py
src/omnigrasp_perception/omnigrasp_perception/tracking/: __init__.py  temporal_filter.py
src/omnigrasp_perception/test/: test_camera_model.py  test_detection_fusion.py  test_temporal_filter.py
web/: index.html
