<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnigrasp_perception</name>
  <version>0.1.0</version>
  <description>Multi-model perception stack for OmniGrasp</description>
  <maintainer email="jayakshata@example.com">Jayakshata</maintainer>
  <license>MIT</license>

  <!--
    BUILD TYPE: ament_python
    Unlike omnigrasp_interfaces (which uses ament_cmake because message
    generation requires CMake), this package is pure Python.
    ament_python is simpler — no CMakeLists.txt needed, just setup.py.
  -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 dependencies we import in our Python code -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Our custom messages -->
  <depend>omnigrasp_interfaces</depend>

  <!-- Image conversion (ROS2 Image ↔ OpenCV numpy array) -->
  <depend>cv_bridge</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>